--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                       <a class="navbar-brand" href="index.html">
-                        <img class="d-none d-md-inline-block  h-auto w-100" style="max-width: 70px;" src="logo.png">
+                        <img class="d-none d-md-inline-block  h-auto w-100" style="max-width: 70px;" src="fotoatas.jpeg">
                       </a>
                     </li>
                   </ul>
@@ -47,7 +47,7 @@
             <div class="col-12">
               <nav class="navbar navbar-expand-md navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <img class="d-none d-md-inline-block  h-auto w-100" style="max-width: 200px;" src="LOGO1.png">
+                    <img class="d-none d-md-inline-block  h-auto w-100" style="max-width: 200px;" src="foto.jpeg">
                   
                   </a>
                 <div class="navbar-collapse" id="navbaruatama">
